@@ -1831,7 +1831,7 @@ public class FSImage extends Storage {
    * @param conf the Configuration
    * @param defaultValue a default value for the attribute, if null
    * @return a Collection of URIs representing the values in 
-   * fs.checkpoint.dir configuration property
+   * dfs.namenode.checkpoint.dir configuration property
    */
   static Collection<URI> getCheckpointDirs(Configuration conf,
       String defaultValue) {
